Fixed pointmap initial visibility by just changing visible to true

--- a/css/map.css
+++ b/css/map.css
@@ -205,7 +205,7 @@ div#tweets {
 
 div#cloud {
   margin-top: 0px;
-  height: 23%;
+  height: 24%;
 }
 
 div#sortPref {
